--- a/spring_mvc/pom.xml
+++ b/spring_mvc/pom.xml
@@ -165,6 +165,12 @@
     		<groupId>org.aspectj</groupId>
     		<artifactId>aspectjweaver</artifactId>
     		<version>1.7.0</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
+		<dependency>
+    		<groupId>com.alibaba</groupId>
+    		<artifactId>druid</artifactId>
+    		<version>1.1.0</version>
 		</dependency> 
   </dependencies>
   <build>
